# stm32-board-microbenchmarks

./: .gitignore  .gitmodules  README.md
benchmark/: CMakeLists.txt  CMakePresets.json  README.md  entobench_helpers.cmake
benchmark/benchmark/configs/: control_benchmarks.json  estimation_benchmarks.json  perception_benchmarks.json
benchmark/configs/: control_benchmarks.json  estimation_benchmarks.json  microbench.json  microbench_gem5.json  microbench_gem5_nocache.json  microbench_lowreps.json  microbench_nocache.json  microbench_none.json  microbench_noprefetch.json  perception_benchmarks.json
benchmark/microbench/: CMakeLists.txt  bench_alu16_harness_inline.cc  bench_matvec_12x12.cc  bench_nop_harness_inline.cc  bench_preamble_zero_vldr.cc  bench_preamble_zero_vmov_dpair.cc  bench_preamble_zero_vmov_ssingle.cc  bench_tinympc_capture.cc  bench_tinympc_diff.cc  bench_vcmpe_vmovcond.cc  bench_vldm_vstm.cc  bench_vldm_vstm_capture.cc  bench_vldmia_d1.cc  bench_vldmia_d7wb.cc  bench_vldmia_d_range.cc  bench_vmov.cc  bench_vmov_capture.cc  bench_vmul.cc  bench_vmul_capture.cc  bench_vpush_vpop.cc  bench_vpush_vpop_capture.cc  bench_vstmia_d_range.cc  bench_vstmia_d_range_capture.cc  gem5_m5ops_semi.h  inline_benchmarks.cc  inline_harness_main.cc  kernel_art_cap_1024.S  kernel_icache_miss.S  kernels.S  kernels_fetch_char.h  kernels_inline.h  kernels_v2_inline.h  microbench_main.cc
benchmark/openocd/: stm32g4x.cfg
benchmark/scripts/: analyze_fetch_char.py  logs_to_latex.py  parse_logs.py  run_all_benchmarks.sh  run_fetch_char.sh
verification/: .gitignore  README.md  board_reference.txt  configure_real_bench.py  sweep_fpu_board.sh  sweep_fpu_gem5.sh  sweep_real_board.sh
